# TFM_Landmark_Based_Localization

./: .gitignore  README.md  RenderOption_2024-02-27-21-20-46.json  S3_hierarchy.xml  ScreenCamera_2024-02-27-21-20-45.json  clustering_debug.rviz  data.yaml  hd_map.json  hd_map0.json  hd_map1.json  hd_map2.json  hd_map3.json  hd_map4.json  hd_map5.json  hd_map6.json  hd_map7.json  hd_map8.json  hd_map_mod0.json  params.yaml  requirements.txt
hd_map_gen/: clustering_test.py  map_pointcloud_concatenated.py  map_pointcloud_concatenated_test.py  map_signs_pb2.py  readme.md  test_map_pointcloud_concatenated.py
hd_map_gen/protos/: map_signs.proto
landmark_detection/: CMakeLists.txt  camera_calibrations.json  landmark_detection_labeled.py  package.xml  yolo_test.py
landmark_detection/src/: generate_dataset.py  landmark_detection.py  panoramic_test.py  train_landmark_detection.py  yolo_test.py
landmark_detection/utils/: load_yolo_data.py
pointcloud_clustering/: CMakeLists.txt  README.md  downsamplig_flow.puml  package.xml
pointcloud_clustering/config/: client_config.conf  clustering_config.conf  config.conf  data_fusion_config.conf
pointcloud_clustering/include/: custom_functions.h
pointcloud_clustering/launch/: pc_clustering_v1.launch
pointcloud_clustering/map/: map.json
pointcloud_clustering/msg/: CameraProj.msg  observationRPY.msg  positionRPY.msg
pointcloud_clustering/src/: Kalman_Loc.cpp  cluster_pointcloud.cpp  clustering.cpp  custom_functions.cpp  data_fusion.cpp  data_fusion_backup.cpp  data_fusion_bkup.cpp  data_fusion_example.cpp  ekf.cpp  euclidean_clustering.cpp  euclidean_clustering.py  landmark_detection.py  publish_pointcloud.py  subscribe_pointcloud.py  test_subscriber.py  waymo_client.py
pointcloud_clustering/srv/: clustering_srv.srv  data_fusion_srv.srv  landmark_detection_srv.srv
positioning/: CMakeLists.txt  package.xml
positioning/launch/: pc_clustering_v1.launch
positioning/src/: clustered_pc.json  data_association.py  detection_association.py
results/: cameras_test.py  chi2.py  clustering_results.ipynb  coordinate_systems_tests.py  ekf_results.py  landmark_association_results.ipynb  landmark_detection_results.ipynb  landmark_detection_results.py  landmark_localization_evo.ipynb  landmark_localization_results.ipynb  odometry_test.py
src/: semseg_pcd_fuse.py
src/data/: WaymoParser.py  adapter.py  annot_coco2yolo.py  kitti_download_sample.py  kitti_download_scene.py  kitti_explore_data.py  kitti_s3_content.py  kitti_velo2rosbag.py  load_data.py  tfrecord_content.json  waymo2coco.py  waymo2rosbag.py  waymo_2d_parser.py  waymo_3d_parser.py  waymo_3d_parser_test.py  waymo_instance_parser.py  waymo_pointcloud_parser.py  waymo_segment_parser.py  waymo_semantic_parser.py
src/hd_map_gen/: cluster_pointcloud.py  clustering_test.py  generate_hd_map.py  map_pointcloud.py  map_pointcloud_concatenated.py  map_test.py
src/landmark_detection/: landmark_detection_labeled.py  yolo_test.py
src/pointcloud_ros/: publish_waymo_lidar_rosbag.py  semseg_pcd_fuse.py
src/test/: yolo_test.py
src/utils/: load_data.py  s3_utils.py
uml/: client_classes.puml  clustering_sys_context.puml
waymo_parser/: CMakeLists.txt  package.xml
waymo_utils/: WaymoParser.py  bbox_utils.py  calibration.txt  coordinate_systems_tests.py  ekf_results_test.py  landmark_poses.pkl  landmark_poses_test.py  map_clustering_test.py  map_ontology.json  map_test.py  odometry_plot_test.py  odometry_test.py  publisher_utils.py  read_map.py  test_map_landmarks.py  test_observations_map.py  test_pointcloud_projection.py  transform_utils.py  waymo2coco.py  waymo_2d_parser.py  waymo_3d_parser.py  waymo_odometry.py  waymo_pointcloud_parser.py  waymo_semantic_parser.py
(+35 files in other folders)
